--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <div id="timer-container">
         <span id="timer">00:00:00</span>
-        <button id="reset">Start</button>
+        <button id="reset">Reset</button>
     </div>
     <script src="js/logic.js"></script>
 </body>
